--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-15dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/ic_splash"/>
+        android:background="@drawable/now_playing_controls_background_light"
+        android:scaleType="centerCrop"/>
 
     <View
         android:layout_width="match_parent"
@@ -28,4 +27,37 @@
         android:textColor="@color/white"
         android:textSize="75dp"
         />
+
+    <RelativeLayout
+        android:id="@+id/progress_elements_container"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/building_library_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:text="@string/building_music_library"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white"/>
+
+        <ProgressBar
+            android:id="@+id/building_library_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/building_library_task"
+            android:layout_alignRight="@+id/building_library_task"
+            android:layout_below="@+id/building_library_task"
+            android:layout_marginLeft="-30dp"
+            android:layout_marginRight="-30dp"/>
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
