--- a/app/src/main/res/drawable/drawable_recycler_view_background.xml
+++ b/app/src/main/res/drawable/drawable_recycler_view_background.xml
@@ -3,9 +3,8 @@
     <item
         android:id="@+id/gradientDrawble"
         android:top="340dp">
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
         </shape>
     </item>
 
