--- a/app/src/main/res/layout/activity_browser_sub_list.xml
+++ b/app/src/main/res/layout/activity_browser_sub_list.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/browser_sub_drawer_parent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/browser_sub_drawer_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <RelativeLayout
@@ -21,13 +21,13 @@
             android:background="@color/bpBlue"
             android:foreground="#10000000"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_placeholder"/>
+            app:srcCompat="@drawable/ic_placeholder" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_alignParentTop="true"
-            android:background="@drawable/toolbar_bg_gradient"/>
+            android:background="@drawable/toolbar_bg_gradient" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:layout_height="?actionBarSize"
                 android:layout_alignParentLeft="true"
                 android:background="?selectableItemBackground"
-                app:srcCompat="@drawable/drawable_arrow_back"/>
+                app:srcCompat="@drawable/drawable_arrow_back" />
 
             <ImageButton
                 android:id="@+id/search_button"
@@ -47,7 +47,7 @@
                 android:layout_height="?actionBarSize"
                 android:layout_alignParentRight="true"
                 android:background="?selectableItemBackground"
-                android:src="@drawable/ic_action_search"/>
+                android:src="@drawable/ic_action_search" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -76,7 +76,7 @@
                 android:singleLine="true"
                 android:text="Header Text"
                 android:textColor="#FFFFFF"
-                android:textSize="24sp"/>
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/browser_sub_header_sub_text"
@@ -96,7 +96,7 @@
                 android:singleLine="true"
                 android:text="Subtext"
                 android:textColor="#FF999999"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/browser_sub_play_all"
@@ -105,14 +105,13 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="34dp"
+                android:backgroundTint="@color/pink"
                 android:minHeight="0dp"
                 android:padding="13dp"
                 android:text="Play All"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="12sp"
-                app:backgroundTint="@color/pink"
-                />
+                android:textSize="12sp" />
 
             <ImageButton
                 android:id="@+id/overflow"
@@ -124,7 +123,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:padding="4dp"
                 android:tint="@color/white"
-                app:srcCompat="@drawable/drawable_overflow"/>
+                app:srcCompat="@drawable/drawable_overflow" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -133,10 +132,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/browser_sub_header_layout"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         android:clipToPadding="false"
         android:paddingBottom="65dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/no_songs"
@@ -161,7 +160,7 @@
             android:text="It's empty here."
             android:textColor="@color/white"
             android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </android.support.v7.widget.CardView>
 
