--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_background"
@@ -22,79 +21,72 @@
         app:borderWidth="0dp"
         app:elevation="22dp"
         app:fabSize="mini"
-        app:srcCompat="@drawable/play"/>
+        app:srcCompat="@drawable/play" />
 
     <View
         android:id="@+id/shadow"
         android:layout_width="match_parent"
         android:layout_height="12dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/drawable_black_to_transparent"/>
+        android:background="@drawable/drawable_black_to_transparent" />
 
-    <RelativeLayout
-        android:id="@+id/simple_one"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_below="@id/shadow"
-        android:background="@color/colorPrimary">
+        android:elevation="8dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+        <RelativeLayout
+            android:id="@+id/simple_one"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="70dp"
+            android:layout_below="@id/shadow">
 
-        <View
-            android:id="@+id/dark_patch"
-            android:layout_width="75dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:background="@color/colorPrimary"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
-        <View
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/dark_patch"
-            android:background="@drawable/drawable_right_to_left_gradient"/>
 
-        <SeekBar
-            android:id="@+id/seek_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/text_holder"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            android:indeterminate="false"
-            android:paddingBottom="10dp"
-            android:paddingTop="15dp"
-            android:progress="0"
-            android:thumb="@drawable/transparent_drawable"
-            android:thumbOffset="100000dp"
-            android:thumbTint="@null"/>
+            <SeekBar
+                android:id="@+id/seek_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/text_holder"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="80dp"
+                android:indeterminate="false"
+                android:paddingBottom="10dp"
+                android:paddingTop="15dp"
+                android:progress="0"
+                android:thumb="@drawable/transparent_drawable"
+                android:thumbOffset="100000dp"
+                android:thumbTint="@null" />
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/durationcard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="12dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="10dp">
-
-            <TextView
-                android:id="@+id/duration_text"
+            <android.support.v7.widget.CardView
+                android:id="@+id/durationcard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="4dp"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                tools:text="00:00"/>
-        </android.support.v7.widget.CardView>
-    </RelativeLayout>
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:id="@+id/duration_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="4dp"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    tools:text="00:00" />
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
