--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -1,12 +1,11 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:foreground="?selectableItemBackground"
-    app:cardBackgroundColor="@color/colorPrimaryDark">
+    android:elevation="8dp"
+    android:foreground="?selectableItemBackground">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -24,7 +23,7 @@
                 android:layout_alignParentTop="true"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/ic_placeholder"/>
+                app:srcCompat="@drawable/ic_placeholder" />
 
             <RelativeLayout
                 android:id="@+id/linear_layout_footer"
@@ -43,9 +42,7 @@
                     android:ellipsize="marquee"
                     android:singleLine="true"
                     android:text="Title Text"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/white"
-                    />
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
                     android:id="@+id/gridViewSubText"
@@ -57,8 +54,7 @@
                     android:singleLine="true"
                     android:text="Subtext"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/textColorSecondary"
-                    />
+                    android:textColor="@color/textColorSecondary" />
 
                 <ImageView
                     android:id="@+id/overflow"
@@ -71,7 +67,7 @@
                     android:padding="5dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
-                    app:srcCompat="@drawable/drawable_overflow"/>
+                    app:srcCompat="@drawable/drawable_overflow" />
 
             </RelativeLayout>
         </RelativeLayout>
