--- a/app/src/main/res/layout/list_view_sub_browser_item.xml
+++ b/app/src/main/res/layout/list_view_sub_browser_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="84dp"
-                android:background="@color/colorPrimary"
-                android:foreground="?android:attr/selectableItemBackground">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="84dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/listViewRightSubText"
@@ -17,7 +16,7 @@
         android:lines="1"
         android:text="0:00"
         android:textColor="@color/textColorSecondary"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/listViewTrackNumber"
@@ -27,8 +26,7 @@
         android:layout_centerVertical="true"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:id="@+id/listViewTextContainer"
@@ -58,8 +56,7 @@
                 android:gravity="bottom"
                 android:singleLine="true"
                 android:text="Song Name"
-                android:textColor="@color/white"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
@@ -82,7 +79,7 @@
                 android:singleLine="true"
                 android:text="Artist Name"
                 android:textColor="@color/textColorSecondary"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
         </RelativeLayout>
 
@@ -98,6 +95,7 @@
         android:padding="8dp"
         android:scaleX="0.7"
         android:scaleY="0.7"
-        app:srcCompat="@drawable/drawable_overflow"/>
+        android:tint="@color/_light_gray"
+        app:srcCompat="@drawable/drawable_overflow" />
 
 </RelativeLayout>
