Commented code and bug fixes.

--- a/app/src/main/res/layout-sw320dp-land/activity_now_playing_2.xml
+++ b/app/src/main/res/layout-sw320dp-land/activity_now_playing_2.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/now_playing_drawer_frame_root"
@@ -23,7 +22,7 @@
             android:id="@+id/nowPlayingPlaylistPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true" />
 
         <android.support.v7.widget.CardView
             android:id="@+id/seekbarIndicatorParent"
@@ -53,7 +52,7 @@
                     android:singleLine="true"
                     android:text="00:00:00"
                     android:textColor="#000000"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -68,6 +67,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:visibility="invisible"
             app:cardBackgroundColor="@color/white">
 
 
@@ -89,7 +89,7 @@
                     android:paddingBottom="10dp"
                     android:paddingTop="10dp"
                     android:progress="0"
-                    android:thumb="@drawable/transparent_drawable"/>
+                    android:thumb="@drawable/transparent_drawable" />
 
 
                 <LinearLayout
@@ -109,7 +109,7 @@
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
                         android:scaleType="centerInside"
-                        app:srcCompat="@drawable/shuffle"/>
+                        app:srcCompat="@drawable/shuffle" />
 
                     <ImageButton
                         android:id="@+id/previousButton"
@@ -122,7 +122,7 @@
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
                         android:scaleX="1.5"
-                        app:srcCompat="@drawable/skip_backward"/>
+                        app:srcCompat="@drawable/skip_backward" />
 
                     <RelativeLayout
                         android:id="@+id/playPauseButtonBackground"
@@ -144,7 +144,7 @@
                             android:scaleX="1.2"
                             android:scaleY="1.2"
                             android:visibility="visible"
-                            app:srcCompat="@drawable/pause"/>
+                            app:srcCompat="@drawable/pause" />
 
                     </RelativeLayout>
 
@@ -159,7 +159,7 @@
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
                         android:scaleX="1.5"
-                        app:srcCompat="@drawable/skip_forward"/>
+                        app:srcCompat="@drawable/skip_forward" />
 
                     <ImageButton
                         android:id="@+id/repeatButton"
@@ -171,7 +171,7 @@
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
                         android:scaleType="centerInside"
-                        app:srcCompat="@drawable/repeat"/>
+                        app:srcCompat="@drawable/repeat" />
                 </LinearLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -182,8 +182,7 @@
         android:id="@+id/queue_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        ></RelativeLayout>
+        android:layout_alignParentRight="true"></RelativeLayout>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/id_toolbar_container"
@@ -200,6 +199,6 @@
             android:layout_height="?attr/actionBarSize"
             android:elevation="0dp"
             app:elevation="0dp"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </android.support.design.widget.AppBarLayout>
 </RelativeLayout>
